// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAbilityConfig characterization > FxAuraFlame vs FxFrostPlagueCocoon > pins the Best Builds (no-trails) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": "Disease",
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrap": false,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": true,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 8,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrap": false,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxAuraFlame vs FxFrostPlagueCocoon > pins the Compare (trails=false) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": "Disease",
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": true,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 8,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxAuraFlame vs FxFrostPlagueCocoon > pins the Compare (trails=true) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": "Disease",
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 30,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": true,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 30,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 30,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 8,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxHunkerPoison vs FxYolkRadTrail > pins the Best Builds (no-trails) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPoisonArea": true,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": true,
  "attackerTotemStatusId": "Poison_Status",
  "attackerToxicTrap": false,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": true,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": true,
  "defenderTotemStatusId": "Radiation_Status",
  "defenderToxicTrap": false,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": true,
  "defenderYolkBombValue": "BlurredVision",
}
`;

exports[`buildAbilityConfig characterization > FxHunkerPoison vs FxYolkRadTrail > pins the Compare (trails=false) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": true,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": true,
  "attackerTotemStatusId": "Poison_Status",
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": true,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": true,
  "defenderTotemStatusId": "Radiation_Status",
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": true,
  "defenderYolkBombValue": "BlurredVision",
}
`;

exports[`buildAbilityConfig characterization > FxHunkerPoison vs FxYolkRadTrail > pins the Compare (trails=true) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": true,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": true,
  "attackerTotemStatusId": "Poison_Status",
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": true,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": true,
  "defenderTotemStatusId": "Radiation_Status",
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": "Radiation_Status",
  "defenderTrailValue": 25,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": true,
  "defenderYolkBombValue": "BlurredVision",
}
`;

exports[`buildAbilityConfig characterization > FxSigilSpite vs FxPlain > pins the Best Builds (no-trails) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 3,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 2,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrap": false,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrap": false,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxSigilSpite vs FxPlain > pins the Compare (trails=false) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 3,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 2,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxSigilSpite vs FxPlain > pins the Compare (trails=true) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 3,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": false,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 2,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": false,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 0,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 0,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxToxicLich vs FxShadowLeechFear > pins the Best Builds (no-trails) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": true,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrap": false,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": true,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 12,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 6,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrap": false,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxToxicLich vs FxShadowLeechFear > pins the Compare (trails=false) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": true,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 0,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": true,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 12,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 6,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;

exports[`buildAbilityConfig characterization > FxToxicLich vs FxShadowLeechFear > pins the Compare (trails=true) config 1`] = `
{
  "attackerAdrenaline": false,
  "attackerAuraSubtype": null,
  "attackerCauseFear": false,
  "attackerCocoon": false,
  "attackerCursedSigilStacks": 0,
  "attackerDivination": false,
  "attackerDrowsyArea": false,
  "attackerExpunge": false,
  "attackerFlameTrailValue": 0,
  "attackerFortify": false,
  "attackerFrostNova": false,
  "attackerFrostSnare": false,
  "attackerFrostTrailValue": 0,
  "attackerGrimLariat": false,
  "attackerGuardiansPassage": false,
  "attackerHarden": false,
  "attackerHealingStepValue": 0,
  "attackerHunker": false,
  "attackerHuntersCurse": false,
  "attackerLichMark": true,
  "attackerLichMarkPayloadStatusId": null,
  "attackerLifeLeechValue": 0,
  "attackerPlagueTrailValue": 0,
  "attackerPoisonArea": false,
  "attackerReflect": false,
  "attackerReflux": false,
  "attackerRewind": false,
  "attackerShadowBarrageValue": 0,
  "attackerSpiteValue": 0,
  "attackerThornTrap": false,
  "attackerTotem": false,
  "attackerTotemStatusId": null,
  "attackerToxicTrailValue": 30,
  "attackerToxicTrap": false,
  "attackerTrailStatusId": null,
  "attackerTrailValue": 0,
  "attackerUnbridledRage": false,
  "attackerWardenRage": false,
  "attackerYolkBomb": false,
  "attackerYolkBombValue": null,
  "badOmenOutcomes": [
    {
      "label": "Burn +8",
      "stacks": 8,
      "statusId": "Burn_Status",
    },
  ],
  "defenderAdrenaline": false,
  "defenderAuraSubtype": null,
  "defenderCauseFear": true,
  "defenderCocoon": false,
  "defenderCursedSigilStacks": 0,
  "defenderDivination": false,
  "defenderDrowsyArea": false,
  "defenderExpunge": false,
  "defenderFlameTrailValue": 0,
  "defenderFortify": false,
  "defenderFrostNova": false,
  "defenderFrostSnare": false,
  "defenderFrostTrailValue": 0,
  "defenderGrimLariat": false,
  "defenderGuardiansPassage": false,
  "defenderHarden": false,
  "defenderHealingStepValue": 0,
  "defenderHunker": false,
  "defenderHuntersCurse": false,
  "defenderLichMark": false,
  "defenderLichMarkPayloadStatusId": null,
  "defenderLifeLeechValue": 12,
  "defenderPlagueTrailValue": 0,
  "defenderPoisonArea": false,
  "defenderReflect": false,
  "defenderReflux": false,
  "defenderRewind": false,
  "defenderShadowBarrageValue": 6,
  "defenderSpiteValue": 0,
  "defenderThornTrap": false,
  "defenderTotem": false,
  "defenderTotemStatusId": null,
  "defenderToxicTrailValue": 0,
  "defenderToxicTrap": false,
  "defenderTrailStatusId": null,
  "defenderTrailValue": 0,
  "defenderUnbridledRage": false,
  "defenderWardenRage": false,
  "defenderYolkBomb": false,
  "defenderYolkBombValue": null,
}
`;
